<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chauviste Game</string>
    <string name="pad">pad</string>
    <string name="hero">hero</string>
    <string name="buttons">a_b_buttons</string>
    <string name="select">select</string>
    <string name="ATTAQUE">ATTAQUE</string>
    <string name="MAGIE">MAGIE</string>
    <string name="FUIR">FUIR</string>
</resources>
