<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/layout"
              android:background="@android:color/white">

    <com.example.Chauviste_Game.GameMap
        android:layout_height="323dp"
        android:layout_width="fill_parent"
        android:id="@+id/gameMap"/>

    <!-- Game pad -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:src="@drawable/pad" android:contentDescription="@string/pad"
            android:layout_x="3dp" android:layout_y="320dp"/>
    <ImageButton
            style="?android:attr/buttonStyleSmall" android:layout_width="73dp" android:layout_height="62dp"
            android:background="@android:color/transparent"
            android:id="@+id/top" android:layout_x="65dp" android:layout_y="330dp"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="73dp" android:layout_height="62dp"
            android:background="@android:color/transparent" android:id="@+id/bot" android:layout_x="65dp"
            android:layout_y="450dp"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="62dp" android:layout_height="73dp"
            android:background="@android:color/transparent" android:id="@+id/right" android:layout_x="129dp"
            android:layout_y="383dp"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="62dp" android:layout_height="73dp"
            android:background="@android:color/transparent" android:id="@+id/left" android:layout_x="15dp"
            android:layout_y="383dp"/>


    <!-- Buttons A & B -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" android:layout_x="225dp" android:layout_y="332dp"
            android:src="@drawable/buttons" android:contentDescription="@string/buttons"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="55dp" android:layout_height="55dp"
            android:background="@android:color/transparent" android:id="@+id/a_Button" android:layout_x="285dp"
            android:layout_y="335dp"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="55dp" android:layout_height="55dp"
            android:background="@android:color/transparent" android:id="@+id/b_Button" android:layout_x="230dp"
            android:layout_y="449dp"/>


    <!-- Select Button -->
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3" android:layout_x="210dp" android:layout_y="400dp"
            android:src="@drawable/select" android:contentDescription="@string/select"/>
    <ImageButton style="?android:attr/buttonStyleSmall" android:layout_width="130dp" android:layout_height="wrap_content"
            android:background="@android:color/transparent" android:id="@+id/select_button_panel" android:layout_x="223dp"
            android:layout_y="400dp"/>

    <!-- Menu -->
    <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/statsPanel"
            android:layout_x="28dp"
            android:layout_y="5dp"
            android:visibility="invisible"
            android:background="@drawable/border">

        <ProgressBar style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" android:id="@+id/statsHPBar"
                     android:layout_width="200dp" android:layout_height="wrap_content"
                     android:layout_marginTop="41dp" android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"/>
        <ProgressBar style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal" android:id="@+id/statsManaBar"
                     android:layout_width="200dp" android:layout_height="wrap_content"
                     android:indeterminate="false"
                     android:layout_below="@+id/statsHPBar" android:layout_alignStart="@+id/statsHPBar"
                     android:layout_marginTop="45dp"/>
        <TextView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/forceIntelPanel" android:layout_below="@+id/statsManaBar"
                android:layout_alignStart="@+id/statsManaBar" android:layout_marginTop="48dp"/>
    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="300dp"
                  android:layout_height="300dp"
                  android:id="@+id/panelLayout"
                  android:layout_x="28dp"
                  android:layout_y="5dp"
                  android:orientation="vertical"
                  android:visibility="invisible"
                  android:background="@drawable/border" android:paddingStart="5dp">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:visibility="invisible"
                android:id="@+id/button2" android:layout_gravity="center_horizontal"/>
        <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:id="@+id/stats_button" android:layout_gravity="center_horizontal"
                android:text="STATISTIQUES"
                android:background="@drawable/button_border"/>
        <View
                android:layout_width="155dp"
                android:layout_height="3dp"
                android:background="@android:color/holo_blue_dark"/>
        <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="INVENTAIRE"
                android:id="@+id/inventaire_button" android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"/>
        <View
                android:layout_width="155dp"
                android:layout_height="3dp"
                android:background="@android:color/holo_blue_dark"/>
        <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="SAUVERGARDER"
                android:id="@+id/save_button" android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"/>
        <View
                android:layout_width="155dp"
                android:layout_height="3dp"
                android:background="@android:color/holo_blue_dark"/>
        <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="QUITTER"
                android:id="@+id/quitter_button" android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"/>
    </LinearLayout>



</AbsoluteLayout>

